test/tests/errors/error-record-dot-non-record.sm
// true
// false
// false
/**/
/**/

program {
    var person: string = "Tim";
    output person.name;
}